[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://core/Streamer.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/MenuContext/MenuContext.gd" type="Script" id=3]
[ext_resource path="res://ui/Camera2D/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://core/SourceLoader.gd" type="Script" id=5]
[ext_resource path="res://ui/Jump.gd" type="Script" id=6]
[ext_resource path="res://ui/DebugOverlay/DebugOverlay.gd" type="Script" id=7]
[ext_resource path="res://ui/themes/LL48.tres" type="DynamicFont" id=8]
[ext_resource path="res://ui/themes/LL20.tres" type="DynamicFont" id=9]
[ext_resource path="res://ui/Starter/Starter.gd" type="Script" id=10]
[ext_resource path="res://ui/themes/icons/ico_load.png" type="Texture" id=11]
[ext_resource path="res://ui/themes/icons/ico_import.png" type="Texture" id=12]
[ext_resource path="res://ui/themes/LL24.tres" type="DynamicFont" id=13]
[ext_resource path="res://ui/themes/theme_context.tres" type="Theme" id=14]
[ext_resource path="res://ui/themes/theme_general.tres" type="Theme" id=15]
[ext_resource path="res://ui/themes/LLPage.tres" type="DynamicFont" id=16]
[ext_resource path="res://ui/themes/LL16.tres" type="DynamicFont" id=17]

[node name="Main" type="Control"]
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Core" type="Node" parent="."]

[node name="SourceLoader" type="Node" parent="Core"]
script = ExtResource( 5 )

[node name="Streamer" parent="Core" instance=ExtResource( 2 )]

[node name="Tween" type="Tween" parent="Core"]

[node name="TexAll" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 540 )
current = true
limit_smoothed = true
script = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Debug" type="VBoxContainer" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Debug"]
margin_right = 40.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label2" type="Label" parent="UI/Debug"]
margin_top = 28.0
margin_right = 40.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label3" type="Label" parent="UI/Debug"]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label4" type="Label" parent="UI/Debug"]
margin_top = 84.0
margin_right = 40.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label5" type="Label" parent="UI/Debug"]
margin_top = 112.0
margin_right = 40.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label6" type="Label" parent="UI/Debug"]
margin_top = 140.0
margin_right = 40.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label7" type="Label" parent="UI/Debug"]
margin_top = 168.0
margin_right = 40.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label8" type="Label" parent="UI/Debug"]
margin_top = 196.0
margin_right = 40.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="Label9" type="Label" parent="UI/Debug"]
margin_top = 224.0
margin_right = 40.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0.47451, 1, 1 )

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
margin_left = -957.503
margin_top = 1048.66
margin_right = -717.503
margin_bottom = 1096.66
theme = ExtResource( 15 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="Control" parent="UI"]
visible = false
margin_right = 400.0
margin_bottom = 120.0
theme = ExtResource( 15 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/Jump"]
margin_right = 400.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="UI/Jump"]
margin_right = 400.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Jump/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 388.0
margin_bottom = 108.0

[node name="SpinBox" type="SpinBox" parent="UI/Jump/Margin/VBoxContainer"]
margin_right = 376.0
margin_bottom = 45.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Jump/Margin/VBoxContainer"]
margin_top = 53.0
margin_right = 376.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="ButJump" type="Button" parent="UI/Jump/Margin/VBoxContainer/HBoxContainer"]
margin_right = 184.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Jump"

[node name="ButCancel" type="Button" parent="UI/Jump/Margin/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 376.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Starter" type="Control" parent="UI"]
visible = false
margin_right = 640.0
margin_bottom = 272.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/Starter"]
margin_right = 640.0
margin_bottom = 272.0
theme = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="UI/Starter"]
margin_right = 640.0
margin_bottom = 264.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="UI/Starter/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 628.0
margin_bottom = 260.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 16

[node name="LabelTitle" type="Label" parent="UI/Starter/Margin/VBox"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_right = 616.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 8 )
text = "get started"
align = 1

[node name="HBox" type="HBoxContainer" parent="UI/Starter/Margin/VBox"]
margin_top = 75.0
margin_right = 616.0
margin_bottom = 248.0
custom_constants/separation = 12
alignment = 1

[node name="VBox1" type="VBoxContainer" parent="UI/Starter/Margin/VBox/HBox"]
margin_left = 150.0
margin_right = 302.0
margin_bottom = 173.0

[node name="ButLoad" type="Button" parent="UI/Starter/Margin/VBox/HBox/VBox1"]
margin_right = 152.0
margin_bottom = 140.0
rect_min_size = Vector2( 128, 128 )
icon = ExtResource( 11 )

[node name="Label" type="Label" parent="UI/Starter/Margin/VBox/HBox/VBox1"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 148.0
margin_right = 152.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 9 )
text = "load from library"
align = 1
valign = 1

[node name="VBox2" type="VBoxContainer" parent="UI/Starter/Margin/VBox/HBox"]
margin_left = 314.0
margin_right = 466.0
margin_bottom = 173.0

[node name="ButImport" type="Button" parent="UI/Starter/Margin/VBox/HBox/VBox2"]
margin_right = 152.0
margin_bottom = 140.0
rect_min_size = Vector2( 128, 128 )
icon = ExtResource( 12 )

[node name="Label" type="Label" parent="UI/Starter/Margin/VBox/HBox/VBox2"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 148.0
margin_right = 152.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 9 )
text = "import to library"
align = 1
valign = 1

[node name="LabelPage" type="Label" parent="UI"]
margin_left = 747.135
margin_top = 1039.0
margin_right = 960.135
margin_bottom = 1078.0
custom_fonts/font = ExtResource( 16 )
text = "24 | 4934"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="CanvasLayer" parent="."]

[node name="MenuContext" type="MarginContainer" parent="Popup"]
visible = false
margin_right = 228.0
margin_bottom = 90.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Popup/MenuContext"]
margin_left = 4.0
margin_top = 4.0
margin_right = 232.0
margin_bottom = 144.0
mouse_filter = 2
theme = ExtResource( 15 )

[node name="Margin" type="MarginContainer" parent="Popup/MenuContext"]
margin_left = 4.0
margin_top = 4.0
margin_right = 232.0
margin_bottom = 144.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="Popup/MenuContext/Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 224.0
margin_bottom = 136.0
custom_constants/separation = 6

[node name="ButLoad" type="Button" parent="Popup/MenuContext/Margin/VBox"]
margin_right = 220.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 14 )
text = "Load from Library"
align = 0

[node name="ButImport" type="Button" parent="Popup/MenuContext/Margin/VBox"]
margin_top = 31.0
margin_right = 220.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 14 )
text = "Import to Library"
align = 0

[node name="ButDirectory" type="Button" parent="Popup/MenuContext/Margin/VBox"]
margin_top = 62.0
margin_right = 220.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 14 )
text = "Open Library in Windows"
align = 0

[node name="HSeparator" type="HSeparator" parent="Popup/MenuContext/Margin/VBox"]
margin_top = 93.0
margin_right = 220.0
margin_bottom = 101.0

[node name="ButJump" type="Button" parent="Popup/MenuContext/Margin/VBox"]
margin_top = 107.0
margin_right = 220.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 14 )
text = "Jump to page"
align = 0

[node name="FileDialog" type="FileDialog" parent="Popup"]
margin_left = -341.178
margin_top = 188.58
margin_right = 558.822
margin_bottom = 788.58
window_title = "Open a Directory"
resizable = true
mode_overrides_title = false
mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
